<resources>
    <string name="app_name">ChattingApp</string>
    <string name="username">Username</string>
    <string name="create_an_account">Create an Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="chat_app">Chat App</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chatapp">ChatAPP</string>
    <string name="todo">TODO</string>
    <string name="profile">Profile</string>
    <string name="search">Search...</string>
    <string name="seen">seen</string>
    <string name="hello">hello</string>
</resources>